--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Rules-Requires-Root: no
 
 Package: arandr
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, ${python3:Depends}, x11-xserver-utils, python3-gi, python3-gi-cairo, gir1.2-gtk-3.0,
+Depends: ${shlibs:Depends}, ${misc:Depends}, ${python3:Depends}, x11-xserver-utils, python3-gi, python3-gi-cairo, gir1.2-gtk-3.0, edid-decode
 Description: Simple visual front end for XRandR
  ARandR is a visual front end for XRandR, which provides full control over the
  relative positioning and rotation of monitors, as well as saving and loading
